-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 20, 21
-
Component/s: hotspot
-
b31
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8300003 | 21 | Nick Gasson | P3 | Resolved | Fixed | b05 |
| JDK-8300402 | 20.0.1 | Nick Gasson | P3 | Resolved | Fixed | b02 |
$ java -XX:+PrintC1Statistics -XX:+UseZGC --version
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/assembler_aarch64.cpp:245
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/nicgas01/jdk/src/hotspot/cpu/aarch64/assembler_aarch64.cpp:245), pid=955885, tid=955956
# assert(_mode != literal) failed: unexpected literal addressing mode
#
# JRE version: OpenJDK Runtime Environment (21.0) (slowdebug build 21-internal-adhoc.nicgas01.jdk)
# Java VM: OpenJDK 64-Bit Server VM (slowdebug 21-internal-adhoc.nicgas01.jdk, mixed mode, tiered, compressed class ptrs, z gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x12fad4c] Address::assert_is_nonliteral() const+0x2c
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/assembler_aarch64.cpp:245
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/nicgas01/jdk/src/hotspot/cpu/aarch64/assembler_aarch64.cpp:245), pid=955885, tid=955956
# assert(_mode != literal) failed: unexpected literal addressing mode
#
# JRE version: OpenJDK Runtime Environment (21.0) (slowdebug build 21-internal-adhoc.nicgas01.jdk)
# Java VM: OpenJDK 64-Bit Server VM (slowdebug 21-internal-adhoc.nicgas01.jdk, mixed mode, tiered, compressed class ptrs, z gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x12fad4c] Address::assert_is_nonliteral() const+0x2c
- backported by
-
JDK-8300003 AArch64: "unexpected literal addressing mode" assertion failure with -XX:+PrintC1Statistics
-
- Resolved
-
-
JDK-8300402 AArch64: "unexpected literal addressing mode" assertion failure with -XX:+PrintC1Statistics
-
- Resolved
-
- duplicates
-
JDK-8298053 C1: assert(_mode != literal) failed: unexpected literal addressing mode with -XX:+PrintC1Statistics and -Xcomp
-
- Closed
-
- relates to
-
JDK-8292878 x86: Make scratch register usage explicit in assembler code
-
- Resolved
-
(1 links to)