8299733: AArch64: "unexpected literal addressing mode" assertion failure with -XX:+PrintC1Statistics

MacroAssembler::incrementw() asserts that

  assert(!dst.uses(rscratch1), "invalid dst for address increment");

But Address::uses() can only be called on non-literal addresses.  We
could change this assert to check dst.getMode() first but it seems
cleaner to make Address::uses() handle the non-literal case.

This failure is trivial to reproduce with:

  $ java -XX:+PrintC1Statistics -XX:+UseZGC --version